# gitdida

./: LICENSE  README.md  pyproject.toml  runrunrun.ipynb
docs/: trace.md
src/dida365api/: main.py
src/dida365api/api/: dida365.py
src/dida365api/models/: backlink.py  task.py
src/dida365api/utils/: backlink_util.py  file_util.py  task_selector.py
src/gitdida/: __init__.py  __main__.py  cmdline.py  dodida.py  dogit.py  exceptions.py  functions.py  log.py  run.py
src/gitdida/config/: __init__.py  settings.toml  settings.yml
tests/: test_cmdline.py  test_dogit.py  test_functional.py  test_main.py  test_run.py  test_version.py
