[tool.poetry]
name = "gitdida"
version = "0.1.0"
description = "Auto commit with Gitpython, and send message with Dida365 if error occur."
authors = ["aldwen <7362677@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
