[tool.poetry]
name = "gitdida"
version = "0.2.1"
description = "Auto commit with Gitpython, and send message with Dida365 if error occur."
authors = ["aldwen <7362677@qq.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[tool.poetry.scripts]
gitdida = "gitdida.cmdline:cmdline"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^7.4.3"
click = "^8.1.7"
gitpython = "^3.1.40"
ipykernel = "^6.27.1"
dynaconf = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
